src/modules/sidebars/vaultButton/vaultButton.css
.cp__menubar-repos .ui__dropdown-trigger {
    position: fixed;
    left: 0;
    bottom: 0;
    width: var(--ls-left-sidebar-width);
}

.left-sidebar-inner .nav-contents-container {
    height: calc(100% - 36px);
}

.cp__menubar-repos .dropdown-wrapper {
    bottom: 30px;
    box-shadow: none;
}

.cp__menubar-repos .menu-links-wrapper {
    box-shadow: none;
}

#left-sidebar .left-sidebar-inner .create {
    bottom: 26px;
}

